--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -6,7 +6,12 @@
 
 ### Improvements
 
-#### [Windows] Drop support for building with Visual Studio 2019
+#### [Windows] Drop support for Groonga package that is built with Visual Studio 2019
+
+We don't provide the following packages since this release.
+
+- groonga-xx.x.x-x64-vs2019.zip
+- groonga-xx.x.x-x64-vs2019-with-vcruntime.zip
 
 ### Fixes
 
