--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -1,5 +1,44 @@
 # News - 15 series
 
+(release-15-1-2)=
+
+## Release 15.1.2 - 2025-07-07
+
+### Improvements
+
+#### [Windows] Drop support for Groonga package that is built with Visual Studio 2019
+
+We don't provide the following packages since this release.
+
+- groonga-xx.x.x-x64-vs2019.zip
+- groonga-xx.x.x-x64-vs2019-with-vcruntime.zip
+
+### Fixes
+
+#### [Near phrase search] Fixed a bug that interval between phrases calculation
+
+This problem may occurs when we use `*NP`, `*NPP`, or `*ONP` with `MAX_ELEMENT_INTERVAL` as below.
+
+- `*NP-1,0,12,11"abc ef"`
+- `*NPP-1,0,10,9"(abc bcd) (ef)"`
+- `*ONP-1,0,5|6 "abc defghi jklmnop"`
+
+If you don't use `MAX_ELEMENT_INTERVAL`, this problem doesn't occur.
+
+Please refer to the following links about usages and syntaxes of `*NP`, `*NPP`, or `*ONPP`.
+
+- [`*NP` in query syntax] {ref}`query-syntax-near-phrase-search-condition`
+- [`*NP` in script syntax] {ref}`script-syntax-near-phrase-search-operator`
+- [`*NPP` in query syntax] {ref}`query-syntax-near-phrase-product-search-condition`
+- [`*NPP` in script syntax] {ref}`script-syntax-near-phrase-product-search-operator`
+- [`*ONPP` in query syntax] {ref}`query-syntax-ordered-near-phrase-search-condition`
+- [`*ONPP` in script syntax] {ref}`script-syntax-ordered-near-phrase-search-operator`
+
+If this problem occur as follows.
+
+- Groonga may return records shouldn't be a hit.
+- Groonga may don't return records that should be hit.
+
 (release-15-1-1)=
 
 ## Release 15.1.1 - 2025-06-02
