Use more suitable English

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -34,7 +34,7 @@ Please refer to the following links about usage and syntax of `*NP`, `*NPP`, or 
 - [`*ONPP` in query syntax] {ref}`query-syntax-ordered-near-phrase-search-condition`
 - [`*ONPP` in script syntax] {ref}`script-syntax-ordered-near-phrase-search-operator`
 
-If this problem occurs, one of two things may happen/occur.
+If this problem occurs, the following things may happen.
 
 - Groonga may return records shouldn't be a hit.
 - Groonga may not return records that should be returned as hits.
