--- a/doc/locale/ja/LC_MESSAGES/news/15.po
+++ b/doc/locale/ja/LC_MESSAGES/news/15.po
@@ -41,7 +41,7 @@ msgstr "修正"
 msgid "[Near phrase search] Fixed a bug that interval between phrases calculation"
 msgstr "[近傍フレーズ検索] フレーズ間の距離の計算の間違いを修正しました"
 
-msgid "This problem may occurs when we use `*NP`, `*NPP`, or `*ONP` with `MAX_ELEMENT_INTERVAL` as below."
+msgid "This problem may occur when we use `*NP`, `*NPP`, or `*ONP` with `MAX_ELEMENT_INTERVAL` as below."
 msgstr "この問題は、以下のように`*NP` や `*NPP`、 `*ONP` を `MAX_ELEMENT_INTERVAL` を指定して使っている時に発生することがあります。"
 
 msgid "`*NP-1,0,12,11\"abc ef\"`"
@@ -56,7 +56,7 @@ msgstr ""
 msgid "If you don't use `MAX_ELEMENT_INTERVAL`, this problem doesn't occur."
 msgstr "`MAX_ELEMENT_INTERVAL` を使ってない場合は、この問題は発生しません。"
 
-msgid "Please refer to the following links about usages and syntaxes of `*NP`, `*NPP`, or `*ONPP`."
+msgid "Please refer to the following links about usage and syntax of `*NP`, `*NPP`, or `*ONPP`."
 msgstr "`*NP` や `*NPP`、 `*ONPP` の構文や使い方については以下のリンクを参照してください。"
 
 msgid "[`*NP` in query syntax] {ref}`query-syntax-near-phrase-search-condition`"
@@ -77,13 +77,13 @@ msgstr "[`*ONPP` のクエリー構文] {ref}`query-syntax-ordered-near-phrase-s
 msgid "[`*ONPP` in script syntax] {ref}`script-syntax-ordered-near-phrase-search-operator`"
 msgstr "[`*ONPP` のスクリプト構文] {ref}`script-syntax-ordered-near-phrase-search-operator`"
 
-msgid "If this problem occur as follows."
-msgstr "この問題が発生すると以下のようになります。"
+msgid "If this problem occurs, the following things may happen."
+msgstr "この問題が発生すると、以下のようなことが起こる可能性があります。"
 
 msgid "Groonga may return records shouldn't be a hit."
 msgstr "ヒットしないはずのレコードを返すことがあります。"
 
-msgid "Groonga may don't return records that should be hit."
+msgid "Groonga may not return records that should be returned as hits."
 msgstr "ヒットするはずのレコードを返さないことがあります。"
 
 msgid "Release 15.1.1 - 2025-06-02"
