--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -17,7 +17,7 @@ We don't provide the following packages since this release.
 
 #### [Near phrase search] Fixed a bug that interval between phrases calculation
 
-This problem may occurs when we use `*NP`, `*NPP`, or `*ONP` with `MAX_ELEMENT_INTERVAL` as below.
+This problem may occur when we use `*NP`, `*NPP`, or `*ONP` with `MAX_ELEMENT_INTERVAL` as below.
 
 - `*NP-1,0,12,11"abc ef"`
 - `*NPP-1,0,10,9"(abc bcd) (ef)"`
@@ -25,7 +25,7 @@ This problem may occurs when we use `*NP`, `*NPP`, or `*ONP` with `MAX_ELEMENT_I
 
 If you don't use `MAX_ELEMENT_INTERVAL`, this problem doesn't occur.
 
-Please refer to the following links about usages and syntaxes of `*NP`, `*NPP`, or `*ONPP`.
+Please refer to the following links about usage and syntax of `*NP`, `*NPP`, or `*ONPP`.
 
 - [`*NP` in query syntax] {ref}`query-syntax-near-phrase-search-condition`
 - [`*NP` in script syntax] {ref}`script-syntax-near-phrase-search-operator`
@@ -34,10 +34,10 @@ Please refer to the following links about usages and syntaxes of `*NP`, `*NPP`, 
 - [`*ONPP` in query syntax] {ref}`query-syntax-ordered-near-phrase-search-condition`
 - [`*ONPP` in script syntax] {ref}`script-syntax-ordered-near-phrase-search-operator`
 
-If this problem occur as follows.
+If this problem occurs, the following things may happen.
 
 - Groonga may return records shouldn't be a hit.
-- Groonga may don't return records that should be hit.
+- Groonga may not return records that should be returned as hits.
 
 (release-15-1-1)=
 
