--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -19,20 +19,20 @@ We don't provide the following packages since this release.
 
 This problem may occur when we use `*NP`, `*NPP`, or `*ONP` with `MAX_ELEMENT_INTERVAL` as below.
 
-- `*NP-1,0,12,11"abc ef"`
+- `*NP-1,0,12"abc ef"`
 - `*NPP-1,0,10,9"(abc bcd) (ef)"`
 - `*ONP-1,0,5|6 "abc defghi jklmnop"`
 
 If you don't use `MAX_ELEMENT_INTERVAL`, this problem doesn't occur.
 
-Please refer to the following links about usage and syntax of `*NP`, `*NPP`, or `*ONPP`.
+Please refer to the following links about usage and syntax of `*NP`, `*NPP`, or `*ONP`.
 
 - [`*NP` in query syntax] {ref}`query-syntax-near-phrase-search-condition`
 - [`*NP` in script syntax] {ref}`script-syntax-near-phrase-search-operator`
 - [`*NPP` in query syntax] {ref}`query-syntax-near-phrase-product-search-condition`
 - [`*NPP` in script syntax] {ref}`script-syntax-near-phrase-product-search-operator`
-- [`*ONPP` in query syntax] {ref}`query-syntax-ordered-near-phrase-search-condition`
-- [`*ONPP` in script syntax] {ref}`script-syntax-ordered-near-phrase-search-operator`
+- [`*ONP` in query syntax] {ref}`query-syntax-ordered-near-phrase-search-condition`
+- [`*ONP` in script syntax] {ref}`script-syntax-ordered-near-phrase-search-operator`
 
 If this problem occurs, the following things may happen.
 
