docs: api/grn_inspect move grn_thread_set_set_limit_func reference to the header file
GitHub: GH-1817

Prepare to switch to documents automatically generated by Doxygen.

--- a/doc/locale/ja/LC_MESSAGES/reference/api/grn_thread.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/api/grn_thread.po
@@ -15,9 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-msgid "パラメータ"
-msgstr ""
-
 msgid "``grn_thread_*``"
 msgstr ""
 
@@ -42,17 +39,5 @@ msgstr "以下は、 :doc:`/reference/executables/groonga` が実際に使って
 msgid "Reference"
 msgstr "リファレンス"
 
-msgid "It's the type of function that sets the max number of threads."
-msgstr "最大スレッド数を設定する関数の型です。"
-
-msgid "It sets the custom function that sets the max number of threads."
-msgstr "最大スレッド数を設定するカスタム関数を設定します。"
-
-msgid "``data`` is passed to ``func`` when ``func`` is called from :c:func:`grn_thread_set_limit()`."
-msgstr "``data`` は :c:func:`grn_thread_set_limit()` が ``func`` を呼ぶときに ``func`` に渡されます。"
-
-msgid "The custom function that sets the max number of threads."
-msgstr "最大スレッド数を設定するカスタム関数。"
-
-msgid "An user data to be passed to ``func`` when ``func`` is called."
-msgstr "``func`` が呼ばれるときに ``func`` に渡されるユーザーのためのデータ。"
+msgid "We are currently switching to automatic generation using Doxygen."
+msgstr "現在、Doxygenを使った自動生成に切り替え中です。"
