--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -1,5 +1,13 @@
 # News - 15 series
 
+(release-15-1-3)=
+
+## Release 15.1.3 - 2025-07-18
+
+### Improvements
+
+#### [Apache Arrow] Added support for Apache Arrow C++ 21.0.0
+
 (release-15-1-2)=
 
 ## Release 15.1.2 - 2025-07-07
