--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (15.1.3-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Horimoto Yasuhiro <horimoto@clear-code.com>  Fri, 18 Jul 2025 06:25:05 -0000
+
 groonga (15.1.2-1) unstable; urgency=low
 
   * New upstream release.
