--- a/doc/locale/ja/LC_MESSAGES/news/15.po
+++ b/doc/locale/ja/LC_MESSAGES/news/15.po
@@ -17,6 +17,36 @@ msgstr ""
 msgid "News - 15 series"
 msgstr "お知らせ - 15系"
 
+msgid "Release 15.1.4 - 2025-07-29"
+msgstr "15.1.4リリース - 2025-07-29"
+
+msgid "Fixes"
+msgstr "修正"
+
+msgid "[Ordered near phrase search] Fixed a bug that interval between phrases calculation"
+msgstr "[順序付き近傍フレーズ直積検索] フレーズ間の距離の計算の間違いを修正しました"
+
+msgid "This problem may occur when we use `*ONPP` with `MAX_ELEMENT_INTERVAL` such as `*ONPP-1,0,10\"(abc bcd) (defg)\"`. If you don't use `MAX_ELEMENT_INTERVAL`, this problem doesn't occur."
+msgstr "この問題は、 `*ONPP-1,0,10\"(abc bcd) (defg)\"` のように `*ONPP` と `MAX_ELEMENT_INTERVAL` を指定して使っている時に発生することがあります。 `MAX_ELEMENT_INTERVAL` を使ってない場合は、この問題は発生しません。"
+
+msgid "Please refer to the following links about usage and syntax of `*ONPP`."
+msgstr "`*ONPP` の構文や使い方については以下のリンクを参照してください。"
+
+msgid "[`*ONPP` in query syntax] {ref}`query-syntax-ordered-near-phrase-product-search-condition`"
+msgstr "[`*ONPP` のクエリー構文] {ref}`query-syntax-ordered-near-phrase-product-search-condition`"
+
+msgid "[`*ONPP` in script syntax] {ref}`script-syntax-ordered-near-phrase-product-search-operator`"
+msgstr "[`*ONPP` のスクリプト構文] {ref}`script-syntax-ordered-near-phrase-product-search-operator`"
+
+msgid "If this problem occurs, the following things may happen."
+msgstr "この問題が発生すると、以下のようなことが起こる可能性があります。"
+
+msgid "Groonga may return records shouldn't be a hit."
+msgstr "ヒットしないはずのレコードを返すことがあります。"
+
+msgid "Groonga may not return records that should be returned as hits."
+msgstr "ヒットするはずのレコードを返さないことがあります。"
+
 msgid "Release 15.1.3 - 2025-07-18"
 msgstr "15.1.3リリース - 2025-07-18"
 
@@ -40,9 +70,6 @@ msgstr ""
 
 msgid "groonga-xx.x.x-x64-vs2019-with-vcruntime.zip"
 msgstr ""
-
-msgid "Fixes"
-msgstr "修正"
 
 msgid "[Near phrase search] Fixed a bug that interval between phrases calculation"
 msgstr "[近傍フレーズ検索] フレーズ間の距離の計算の間違いを修正しました"
@@ -82,15 +109,6 @@ msgstr "[`*ONP` のクエリー構文] {ref}`query-syntax-ordered-near-phrase-se
 
 msgid "[`*ONP` in script syntax] {ref}`script-syntax-ordered-near-phrase-search-operator`"
 msgstr "[`*ONP` のスクリプト構文] {ref}`script-syntax-ordered-near-phrase-search-operator`"
-
-msgid "If this problem occurs, the following things may happen."
-msgstr "この問題が発生すると、以下のようなことが起こる可能性があります。"
-
-msgid "Groonga may return records shouldn't be a hit."
-msgstr "ヒットしないはずのレコードを返すことがあります。"
-
-msgid "Groonga may not return records that should be returned as hits."
-msgstr "ヒットするはずのレコードを返さないことがあります。"
 
 msgid "Release 15.1.1 - 2025-06-02"
 msgstr "15.1.1リリース - 2025-06-02"
