Use more suitable English
Co-authored-by: takuya kodama <a.s.takuya1026@gmail.com>

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -2,11 +2,7 @@
 
 (release-15-1-4)=
 
-## Release 15.1.4 - 2025-07-29
-
-### Fixes
-
-#### [Ordered near phrase search] Fixed a bug that interval between phrases calculation
+#### [Ordered near phrase search] Fixed a bug in the interval calculation between phrases
 
 This problem may occur when we use `*ONPP` with `MAX_ELEMENT_INTERVAL` such as `*ONPP-1,0,10"(abc bcd) (defg)"`.
 If you don't use `MAX_ELEMENT_INTERVAL`, this problem doesn't occur.
