Use more suitable English
Co-authored-by: takuya kodama <a.s.takuya1026@gmail.com>

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -7,7 +7,7 @@
 This problem may occur when we use `*ONPP` with `MAX_ELEMENT_INTERVAL` such as `*ONPP-1,0,10"(abc bcd) (defg)"`.
 If you don't use `MAX_ELEMENT_INTERVAL`, this problem doesn't occur.
 
-Please refer to the following links about usage and syntax of `*ONPP`.
+Please refer to the following links for usage and syntax of `*ONPP`.
 
 - [`*ONPP` in query syntax] {ref}`query-syntax-ordered-near-phrase-product-search-condition`
 - [`*ONPP` in script syntax] {ref}`script-syntax-ordered-near-phrase-product-search-operator`
