Add missint title

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -2,6 +2,10 @@
 
 (release-15-1-4)=
 
+## Release 15.1.4 - 2025-07-29
+
+### Improvements
+
 #### [Ordered near phrase search] Fixed a bug in the interval calculation between phrases
 
 This problem may occur when we use `*ONPP` with `MAX_ELEMENT_INTERVAL` such as `*ONPP-1,0,10"(abc bcd) (defg)"`.
