--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -4,6 +4,8 @@
 
 ## Release 15.1.4 - 2025-07-29
 
+In this release, we fixed a bug in the interval calculation between phrases in `*ONPP` operator.
+
 ### Improvements
 
 #### [Ordered near phrase search] Fixed a bug in the interval calculation between phrases
