--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -8,7 +8,7 @@ In this release, we fixed a bug in the interval calculation between phrases in `
 
 ### Improvements
 
-#### [Ordered near phrase search] Fixed a bug in the interval calculation between phrases
+#### [Ordered near phrase product search] Fixed a bug in the interval calculation between phrases
 
 This problem may occur when we use `*ONPP` with `MAX_ELEMENT_INTERVAL` such as `*ONPP-1,0,10"(abc bcd) (defg)"`.
 If you don't use `MAX_ELEMENT_INTERVAL`, this problem doesn't occur.
