--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -20,7 +20,7 @@ Please refer to the following links for usage and syntax of `*ONPP`.
 
 If this problem occurs, the following things may happen.
 
-- Groonga may return records shouldn't be a hit.
+- Groonga may return records that shouldn't be matched.
 - Groonga may not return records that should be returned as hits.
 
 (release-15-1-3)=
