--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -1,5 +1,28 @@
 # News - 15 series
 
+(release-15-1-4)=
+
+## Release 15.1.4 - 2025-07-29
+
+In this release, we fixed a bug in the interval calculation between phrases in `*ONPP` operator.
+
+### Improvements
+
+#### [Ordered near phrase product search] Fixed a bug in the interval calculation between phrases
+
+This problem may occur when we use `*ONPP` with `MAX_ELEMENT_INTERVAL` such as `*ONPP-1,0,10"(abc bcd) (defg)"`.
+If you don't use `MAX_ELEMENT_INTERVAL`, this problem doesn't occur.
+
+Please refer to the following links for usage and syntax of `*ONPP`.
+
+- [`*ONPP` in query syntax] {ref}`query-syntax-ordered-near-phrase-product-search-condition`
+- [`*ONPP` in script syntax] {ref}`script-syntax-ordered-near-phrase-product-search-operator`
+
+If this problem occurs, the following things may happen.
+
+- Groonga may return records that shouldn't be matched.
+- Groonga may not return records that should be matched.
+
 (release-15-1-3)=
 
 ## Release 15.1.3 - 2025-07-18
