--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (15.1.4-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Horimoto Yasuhiro <horimoto@clear-code.com>  Tue, 29 Jul 2025 00:42:41 -0000
+
 groonga (15.1.3-1) unstable; urgency=low
 
   * New upstream release.
