doc news: fix wrong caption

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -6,7 +6,7 @@
 
 In this release, we fixed a bug in the interval calculation between phrases in `*ONPP` operator.
 
-### Improvements
+### Fixes
 
 #### [Ordered near phrase product search] Fixed a bug in the interval calculation between phrases
 
