doc news: add 15.1.5 entry

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -1,5 +1,27 @@
 # News - 15 series
 
+(release-15-1-5)=
+
+## Release 15.1.5 - 2025-08-29
+
+### Improvements
+
+#### [{doc}`/install/almalinux`] Added support for AlmaLinux 10
+
+#### [{doc}`/reference/normalizers/normalizer_nfkc`] Added support for `unify_hyphen_and_prolonged_sound_mark` and `remove_symbol` combination
+
+#### [{doc}`/reference/commands/table_create`] Added support for `KEY_LARGE` option for `TABLE_PAT_KEY`
+
+### Fixes
+
+#### [{doc}`/install/cmake`] Remove a needless option. [GH-2479][Patched by Tsutomu Katsube]
+
+#### [{doc}`/reference/commands/table_create`] Fix a bug that Groonga dropped `KEY_LARGE` flag from `TABLE_HASH_KEY` after we execute a `truncate` command.
+
+### Thanks
+
+- Tsutomu Katsube
+
 (release-15-1-4)=
 
 ## Release 15.1.4 - 2025-07-29
