--- a/doc/locale/ja/LC_MESSAGES/news/15.po
+++ b/doc/locale/ja/LC_MESSAGES/news/15.po
@@ -17,14 +17,80 @@ msgstr ""
 msgid "News - 15 series"
 msgstr "お知らせ - 15系"
 
+msgid "Release 15.1.5 - 2025-08-29"
+msgstr "15.1.5リリース - 2025-08-29"
+
+msgid "Improvements"
+msgstr "改良"
+
+msgid "[{doc}`/install/almalinux`] Added support for AlmaLinux 10"
+msgstr "[{doc}`/install/almalinux`] AlmaLinux 10をサポートしました"
+
+msgid "AlmaLinux 10 packages are now available. You can install Groonga on AlmaLinux 10 using the standard package installation methods."
+msgstr "AlmaLinux 10用のパッケージが利用可能になりました。標準的なパッケージインストール方法でAlmaLinux 10にGroongaをインストールできます。"
+
+msgid "[{doc}`/reference/normalizers/normalizer_nfkc`] Added support for `unify_hyphen_and_prolonged_sound_mark` and `remove_symbol` combination"
+msgstr "[{doc}`/reference/normalizers/normalizer_nfkc`] `unify_hyphen_and_prolonged_sound_mark`と`remove_symbol`の組み合わせをサポートしました"
+
+msgid "Previously, when both `unify_hyphen_and_prolonged_sound_mark` and `remove_symbol` options were enabled together, the behavior was inconsistent. The hyphen characters were not properly treated as symbols to be removed."
+msgstr "以前は、`unify_hyphen_and_prolonged_sound_mark`と`remove_symbol`の両方のオプションを同時に有効にした場合、動作が一貫していませんでした。ハイフン文字が削除されるシンボルとして適切に扱われていませんでした。"
+
+msgid "This release fixes this issue. Now when both options are enabled:"
+msgstr "このリリースでこの問題を修正しました。両方のオプションが有効な場合"
+
+msgid "Hyphen characters (-, ー, —, ―, etc.) are treated as symbols"
+msgstr "ハイフン文字（-, ー, —, ―など）がシンボルとして扱われます。"
+
+msgid "These characters are properly removed from the normalized text"
+msgstr "これらの文字が正規化されたテキストから適切に削除されます。"
+
+msgid "For example:"
+msgstr "例："
+
+msgid "[{doc}`/reference/commands/table_create`] Added support for `KEY_LARGE` option for `TABLE_PAT_KEY`"
+msgstr "[{doc}`/reference/commands/table_create`] `TABLE_PAT_KEY`で`KEY_LARGE`オプションをサポートしました"
+
+msgid "You can now use the `KEY_LARGE` flag with `TABLE_PAT_KEY` tables to expand the maximum total key size from 4GiB to 1TiB, similar to `TABLE_HASH_KEY` tables. This allows you to store more keys in total, not larger individual keys."
+msgstr "`TABLE_HASH_KEY`テーブルと同様に、`TABLE_PAT_KEY`テーブルでも `KEY_LARGE`フラグを使用して、最大合計キーサイズを4GiBから1TiBに拡張できるようになりました。これにより、個々のキーを大きくするわけではないですが、より多くの種類のキーを保存できるようになります。"
+
+msgid "Previously, `KEY_LARGE` was only available for `TABLE_HASH_KEY`. This limitation meant that users who needed patricia trie features couldn't store more than 4GiB of total key data. With this enhancement, you can create patricia trie tables that can hold more keys:"
+msgstr "以前は、`KEY_LARGE`は`TABLE_HASH_KEY`でのみ利用可能でした。この制限により、パトリシア木の機能が必要なユーザーは4GiB以上の合計キーデータを保存できませんでした。この改善により、より多くのキーを保持できるパトリシア木テーブルを作成できます"
+
+msgid "Fixes"
+msgstr "修正"
+
+msgid "[{doc}`/install/cmake`] Fixed incorrect CMake build and install commands [GH-2479][Patched by Tsutomu Katsube]"
+msgstr "[{doc}`/install/cmake`] 誤ったCMakeビルドとインストールコマンドを修正しました [GH-2479][Tsutomu Katsubeさんによるパッチ]"
+
+msgid "The documentation previously included an incorrect `-B` option in the `cmake --build` and `cmake --install` commands, which caused build errors."
+msgstr "ドキュメントには以前、`cmake --build` と `cmake --install` コマンドに誤った `-B` オプションが含まれており、ビルドエラーの原因となっていました。"
+
+msgid "The corrected commands are now:"
+msgstr "修正されたコマンドは次のとおりです。"
+
+msgid "[{doc}`/reference/commands/table_create`] Fixed a bug where `KEY_LARGE` flag was lost after executing `truncate` command"
+msgstr "[{doc}`/reference/commands/table_create`] `truncate` コマンド実行後に `KEY_LARGE`フラグが失われる不具合を修正しました。"
+
+msgid "Previously, when you executed the `truncate` command on a table with the `KEY_LARGE` flag, the flag was incorrectly removed. This affected both `TABLE_HASH_KEY` and `TABLE_PAT_KEY` tables."
+msgstr "以前は、`KEY_LARGE`フラグを持つテーブルで`truncate`コマンドを実行すると、フラグが誤って削除されていました。これは `TABLE_HASH_KEY`と`TABLE_PAT_KEY`の両方のテーブルに影響していました。"
+
+msgid "This bug caused truncated tables to lose their ability to store more than 4GiB of total key data, potentially leading to unexpected failures when trying to load large amounts of data after truncation."
+msgstr "この不具合により、トランケートされたテーブルは4GiB以上の合計キーデータを保存する能力を失い、トランケート後に大量のデータをロードしようとすると予期しない失敗が発生する可能性がありました。"
+
+msgid "The issue has been fixed by correctly preserving table flags during the truncate operation now."
+msgstr "この問題は、トランケート操作中にテーブルフラグを正しく保持する修正されました。"
+
+msgid "Thanks"
+msgstr "感謝"
+
+msgid "Tsutomu Katsube"
+msgstr "Tsutomu Katsube"
+
 msgid "Release 15.1.4 - 2025-07-29"
 msgstr "15.1.4リリース - 2025-07-29"
 
 msgid "In this release, we fixed a bug in the interval calculation between phrases in `*ONPP` operator."
 msgstr "今回のリリースでは、`*ONPP`演算子のフレーズ間の距離の計算の間違いを修正しました。"
-
-msgid "Fixes"
-msgstr "修正"
 
 msgid "[Ordered near phrase product search] Fixed a bug in the interval calculation between phrases"
 msgstr "[順序付き近傍フレーズ直積検索] フレーズ間の距離の計算の間違いを修正しました"
@@ -52,9 +118,6 @@ msgstr "ヒットするはずのレコードを返さないことがあります
 
 msgid "Release 15.1.3 - 2025-07-18"
 msgstr "15.1.3リリース - 2025-07-18"
-
-msgid "Improvements"
-msgstr "改良"
 
 msgid "[Apache Arrow] Added support for Apache Arrow C++ 21.0.0"
 msgstr "[Apache Arrow] Apache Arrow C++ 21.0.0 をサポートしました"
@@ -139,9 +202,6 @@ msgstr "[GH-2332](https://github.com/groonga/groonga/pull/2332)、[GH-2333](http
 
 msgid "Patched by Vasilii Lakhin."
 msgstr "Vasilii Lakhinさんがパッチ提供。"
-
-msgid "Thanks"
-msgstr "感謝"
 
 msgid "Vasilii Lakhin"
 msgstr "Vasilii Lakhinさん"
