Add a summary for this release

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -4,6 +4,8 @@
 
 ## Release 15.1.5 - 2025-08-29
 
+In this release, we supported for `KEY_LARGE` flag for `TABLE_PAT_KEY`!
+
 ### Improvements
 
 #### [{doc}`/install/almalinux`] Added support for AlmaLinux 10
