Use more suitable description

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -8,7 +8,7 @@ In this release, we supported for `KEY_LARGE` flag for `TABLE_PAT_KEY`!
 
 ### Improvements
 
-#### [{doc}`/reference/commands/table_create`] Added support for `KEY_LARGE` option for `TABLE_PAT_KEY`
+#### [{doc}`/reference/commands/table_create`] Added support for `KEY_LARGE` flag for `TABLE_PAT_KEY`
 
 You can now use the `KEY_LARGE` flag with `TABLE_PAT_KEY` tables to expand the maximum total key size from 4GiB to 1TiB,
 similar to `TABLE_HASH_KEY` tables. This allows you to store more keys in total, not larger individual keys.
