Fix wrong description

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -73,7 +73,7 @@ cmake --install <Build directory path>
 #### [{doc}`/reference/commands/table_create`] Fixed a bug where `KEY_LARGE` flag was lost after executing `truncate` command
 
 Previously, when you executed the `truncate` command on a table with the `KEY_LARGE` flag,
-the flag was incorrectly removed. This affected both `TABLE_HASH_KEY` and `TABLE_PAT_KEY` tables.
+the flag was incorrectly removed. This affected a `TABLE_HASH_KEY` tables.
 
 This bug caused truncated tables to lose their ability to store more than 4GiB of total key data,
 potentially leading to unexpected failures when trying to load large amounts of data after truncation.
