--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -20,14 +20,12 @@ table_create LargePaths TABLE_PAT_KEY|KEY_LARGE ShortText
 #### [{doc}`/reference/normalizers/normalizer_nfkc`] Added support for `unify_hyphen_and_prolonged_sound_mark` and `remove_symbol` combination
 
 Previously, when both `unify_hyphen_and_prolonged_sound_mark` and `remove_symbol` options were enabled together,
-the behavior was inconsistent. The hyphen characters were not properly treated as symbols to be removed.
+These were not work.
+Because the hyphen characters were not properly treated as symbols to be removed.
+In other words, hyphen characters were not removed In this case.
 
-This release fixes this issue. Now when both options are enabled:
-
-- Hyphen characters (-, ー, —, ―, etc.) are treated as symbols
-- These characters are properly removed from the normalized text
-
-For example:
+This release fixes this issue.
+So, hyphen characters are properly removed from the normalized text as below.
 
 ```
 normalize 'NormalizerNFKC("remove_symbol", true, "unify_hyphen_and_prolonged_sound_mark", true)' "090ー1234-5678"
