add translated text and fix grammatical errors

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -20,12 +20,9 @@ table_create LargePaths TABLE_PAT_KEY|KEY_LARGE ShortText
 #### [{doc}`/reference/normalizers/normalizer_nfkc`] Added support for `unify_hyphen_and_prolonged_sound_mark` and `remove_symbol` combination
 
 Previously, when both `unify_hyphen_and_prolonged_sound_mark` and `remove_symbol` options were enabled together,
-These were not work.
-Because the hyphen characters were not properly treated as symbols to be removed.
-In other words, hyphen characters were not removed In this case.
+These combination didn't work as expected because the hyphen characters were not properly treated as symbols to be removed.
 
-This release fixes this issue.
-So, hyphen characters are properly removed from the normalized text as below.
+This release fixes this issue. So, hyphen characters are properly removed from the normalized text as below.
 
 ```
 normalize 'NormalizerNFKC("remove_symbol", true, "unify_hyphen_and_prolonged_sound_mark", true)' "090ー1234-5678"
@@ -67,9 +64,9 @@ cmake --install <Build directory path>
 #### [{doc}`/reference/commands/table_create`] Fixed a bug where `KEY_LARGE` flag was lost after executing `truncate` command
 
 Previously, when you executed the `truncate` command on a table with the `KEY_LARGE` flag,
-the flag was incorrectly removed. This affected a `TABLE_HASH_KEY` tables.
+the flag was incorrectly removed. This affected `TABLE_HASH_KEY` tables.
 
-This bug caused truncated tables to lose their ability to store more than 4GiB of total key data,
+This bug caused truncated table to lose their ability to store more than 4GiB of total key data,
 potentially leading to unexpected failures when trying to load large amounts of data after truncation.
 
 The issue has been fixed by correctly preserving table flags during the truncate operation now.
