fix command styles

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -25,7 +25,10 @@ These combination didn't work as expected because the hyphen characters were not
 This release fixes this issue. So, hyphen characters are properly removed from the normalized text as below.
 
 ```
-normalize 'NormalizerNFKC("remove_symbol", true, "unify_hyphen_and_prolonged_sound_mark", true)' "090ー1234-5678"
+normalize \
+  'NormalizerNFKC("remove_symbol", true, \
+  "unify_hyphen_and_prolonged_sound_mark", true)' \
+  "090ー1234-5678"
 [
   [
     0,
