--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -52,9 +52,9 @@ You can install Groonga on AlmaLinux 10 using the standard package installation 
 
 ### Fixes
 
-#### [{doc}`/install/cmake`] Fixed incorrect CMake build and install commands [GH-2479][Patched by Tsutomu Katsube]
+#### [{doc}`/install/cmake`] Removed a unnecessary option [GH-2479][Patched by Tsutomu Katsube]
 
-The documentation previously included an incorrect `-B` option in the `cmake --build` and `cmake --install` commands,
+The documentation included an incorrect `-B` option in the `cmake --build` and `cmake --install` commands,
 which caused build errors.
 
 The corrected commands are now:
