fix the explanation of the bug about trancate command

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -66,13 +66,10 @@ cmake --install <Build directory path>
 
 #### [{doc}`/reference/commands/table_create`] Fixed a bug where `KEY_LARGE` flag was lost after executing `truncate` command
 
-Previously, when you executed the `truncate` command on a table with the `KEY_LARGE` flag,
-the flag was incorrectly removed. This affected `TABLE_HASH_KEY` tables.
+This issue meant that when you executed the `truncate` command on a `TABLE_HASH_KEY` table with the `KEY_LARGE` flag,
+the table could no longer hold more than 4 GiB of total key data, because the `KEY_LARGE` flag was removed during the truncation.
 
-This bug caused truncated table to lose their ability to store more than 4GiB of total key data,
-potentially leading to unexpected failures when trying to load large amounts of data after truncation.
-
-The issue has been fixed by correctly preserving table flags during the truncate operation now.
+The issue has been fixed by correctly preserving table flags during the truncate operation.
 
 ### Thanks
 
