--- a/doc/locale/ja/LC_MESSAGES/news/15.po
+++ b/doc/locale/ja/LC_MESSAGES/news/15.po
@@ -60,16 +60,13 @@ msgid "The corrected commands are now:"
 msgstr "正しいコマンドは次のとおりです。"
 
 msgid "[{doc}`/reference/commands/table_create`] Fixed a bug where `KEY_LARGE` flag was lost after executing `truncate` command"
-msgstr "[{doc}`/reference/commands/table_create`] `truncate` コマンド実行後に `KEY_LARGE`フラグが失われる不具合を修正しました。"
+msgstr "[{doc}`/reference/commands/table_create`] `truncate` コマンド実行後に `KEY_LARGE`フラグが失われる不具合を修正"
 
-msgid "Previously, when you executed the `truncate` command on a table with the `KEY_LARGE` flag, the flag was incorrectly removed. This affected `TABLE_HASH_KEY` tables."
-msgstr "以前は、`KEY_LARGE`フラグを持つテーブルで`truncate`コマンドを実行すると、フラグが誤って削除されていました。これは `TABLE_HASH_KEY`テーブルに対して発生していました。"
+msgid "This issue meant that when you executed the `truncate` command on a `TABLE_HASH_KEY` table with the `KEY_LARGE` flag, the table could no longer hold more than 4 GiB of total key data, because the `KEY_LARGE` flag was removed during the truncation."
+msgstr "この問題により、`KEY_LARGE`フラグが設定された `TABLE_HASH_KEY`テーブルに対して`truncate`コマンドを実行すると、`KEY_LARGE`フラグがトランケート時に削除されてしまうため、テーブルは合計で4 GiBを超えるキーを保持できなくなっていました。"
 
-msgid "This bug caused truncated table to lose their ability to store more than 4GiB of total key data, potentially leading to unexpected failures when trying to load large amounts of data after truncation."
-msgstr "この不具合により、トランケートされたテーブルは4GiB以上の合計キーデータを保存する能力を失い、トランケート後に大量のデータをロードしようとすると予期しない失敗が発生する可能性がありました。"
-
-msgid "The issue has been fixed by correctly preserving table flags during the truncate operation now."
-msgstr "この問題は、トランケート操作中にテーブルフラグを正しく保持する修正されました。"
+msgid "The issue has been fixed by correctly preserving table flags during the truncate operation."
+msgstr "この不具合は、truncate 実行時にテーブルフラグを正しく保持するように修正されました。"
 
 msgid "Thanks"
 msgstr "感謝"
