--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -52,7 +52,11 @@ You can install Groonga on AlmaLinux 10 using the standard package installation 
 
 ### Fixes
 
-#### [{doc}`/install/cmake`] Removed a unnecessary option [GH-2479][Patched by Tsutomu Katsube]
+#### [{doc}`/install/cmake`] Fixed how to build/install
+
+[GH-2479](https://github.com/groonga/groonga/issues/2479)
+
+Patched by Tsutomu Katsube
 
 The documentation included an incorrect `-B` option in the `cmake --build` and `cmake --install` commands,
 which caused build errors.
