--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -4,7 +4,7 @@
 
 ## Release 15.1.5 - 2025-08-29
 
-In this release, we supported for `KEY_LARGE` flag for `TABLE_PAT_KEY`!
+In this release, we supported `KEY_LARGE` flag for `TABLE_PAT_KEY`!
 
 ### Improvements
 
