fix grammatical error
- These combination
- This combination

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -20,7 +20,7 @@ table_create LargePaths TABLE_PAT_KEY|KEY_LARGE ShortText
 #### [{doc}`/reference/normalizers/normalizer_nfkc`] Added support for `unify_hyphen_and_prolonged_sound_mark` and `remove_symbol` combination
 
 Previously, when both `unify_hyphen_and_prolonged_sound_mark` and `remove_symbol` options were enabled together,
-These combination didn't work as expected because the hyphen characters were not properly treated as symbols to be removed.
+This combination didn't work as expected because the hyphen characters were not properly treated as symbols to be removed.
 
 This release fixes this issue. So, hyphen characters are properly removed from the normalized text as below.
 
